Added ec.pem files in case there will be an error when trying to create .pem files from scratch
Edited the notebooks to be more readable

--- a/Computing inter-group performance.ipynb
+++ b/Computing inter-group performance.ipynb
@@ -5,7 +5,18 @@
    "id": "4cdcc526",
    "metadata": {},
    "source": [
-    "# The code "
+    "# The code in this jupyter notebook \n",
+    "* reads the models and the datasets\n",
+    "* calculates the accuracy of each model on its own dataset (the personal dataset of the peer within the shard), then on the entire shard's dataset\n",
+    "* implements the ensemble method and calculates its accuracy when the model pool is composed of the entire pool of models (models from all trained shards)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "327a5160",
+   "metadata": {},
+   "source": [
+    "### Reading datasets and models from the trained shards"
    ]
   },
   {
@@ -32,9 +43,10 @@
     "\n",
     "\n",
     "# Reading data and models\n",
-    "groups = [str(i) for i in range(0,2)]\n",
-    "peers = [str(i) for i in range(8090, 8100)]\n",
-    "epoch_cutoff = 5"
+    "groups = [str(i) for i in range(0,3)] # the index number of the shards trained (should be found in the aggregate_models folder)\n",
+    "peers = [str(i) for i in range(8090, 8100)] # the port under which the models were trained in a decentralized manner\n",
+    "epoch_cutoff = 6000 # the epoch checkpoint for identifying which models to use\n",
+    "# epoch_cutoff is generally the largest number of epochs trained by any peer (peers may train at different speeds when using 'main.py')"
    ]
   },
   {
@@ -133,7 +145,7 @@
    "id": "4d55c8c6",
    "metadata": {},
    "source": [
-    "### CALCULATING ACCURACIES ON MODELS' OWN DATA"
+    "### Implementing testing algorithm to check accuracy for top1 of individual models on their local and shard-wide dataset"
    ]
   },
   {
@@ -149,11 +161,11 @@
     "    print ('group ', group, 'peer ', peer)\n",
     "    exec (f'model = model_group{group}_peer{peer}', global_scope)\n",
     "    if mode == 'global':\n",
-    "        exec (f'train_df = train_df_group{group}.sample(1000).copy()', global_scope)\n",
-    "        exec (f'test_df = test_df_group{group}.sample(1000).copy()', global_scope)\n",
+    "        exec (f'train_df = train_df_group{group}.copy()', global_scope)\n",
+    "        exec (f'test_df = test_df_group{group}.copy()', global_scope)\n",
     "    elif mode == 'local':\n",
-    "        exec (f'train_df = train_df_group{group}_peer{peer}.sample(1000).copy()', global_scope)\n",
-    "        exec (f'test_df = test_df_group{group}_peer{peer}.sample(1000).copy()', global_scope)\n",
+    "        exec (f'train_df = train_df_group{group}_peer{peer}.copy()', global_scope)\n",
+    "        exec (f'test_df = test_df_group{group}_peer{peer}.copy()', global_scope)\n",
     "        \n",
     "    df_tot = train_df.copy()\n",
     "    df_tst = test_df.copy()\n",
@@ -283,7 +295,7 @@
    "id": "56730e20",
    "metadata": {},
    "source": [
-    "### CALCULATING ACCURACIES ON TOP5 FOR EACH PEER"
+    "### Calculating top5 accuracy for each peer under above conditions"
    ]
   },
   {
@@ -418,7 +430,7 @@
    "id": "a98d88a2",
    "metadata": {},
    "source": [
-    "# Sampling random models and aggregating their suggestions"
+    "### Implementing and saving results for ensemble method under inter-group conditions"
    ]
   },
   {
