--- a/Computing intra-group performance.ipynb
+++ b/Computing intra-group performance.ipynb
@@ -5,7 +5,9 @@
    "id": "7262bf67",
    "metadata": {},
    "source": [
-    "# This is the notebook which tests the performance of the trained models, after training was performed"
+    "# The code in this jupyter notebook \n",
+    "* reads the models and the datasets\n",
+    "* implements the ensemble method and calculates its accuracy when the model pool is solely that of the shard's (i.e. no models can be chosen outside of the shard)\n"
    ]
   },
   {
@@ -24,9 +26,10 @@
     "tokenizer = T5Tokenizer.from_pretrained('t5-small')\n",
     "\n",
     "# \n",
-    "groups = [str(i) for i in range(0,2)]\n",
+    "groups = [str(i) for i in range(0,3)]\n",
     "peers = [str(i) for i in range(8090, 8100)]\n",
-    "epoch_cutoff = 5"
+    "epoch_cutoff = 6000\n",
+    "number_of_models_sampled = 3"
    ]
   },
   {
@@ -99,7 +102,7 @@
    "source": [
     "models_group1_list = []\n",
     "models_group2_list = []\n",
-    "models_group3_list = []\n",
+    "models_group0_list = []\n",
     "\n",
     "for group in groups:\n",
     "    for i, peer in enumerate(peers):\n",
@@ -310,14 +313,6 @@
     "    \n",
     "loaded_dict"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "761341bf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
